--- a/src/main/java/view/DlgRelatorioEntregas.form
+++ b/src/main/java/view/DlgRelatorioEntregas.form
@@ -107,7 +107,7 @@
           <Font name="Segoe UI" size="14" style="1"/>
         </Property>
         <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="ff" green="0" red="0" type="rgb"/>
+          <Color blue="cc" green="cc" red="cc" type="rgb"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Relat&#xf3;rio de Entregas"/>
       </Properties>
