--- a/src/main/java/view/DlgStatusSaida.form
+++ b/src/main/java/view/DlgStatusSaida.form
@@ -114,7 +114,7 @@
           <Font name="Segoe UI" size="14" style="1"/>
         </Property>
         <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="ff" green="0" red="0" type="rgb"/>
+          <Color blue="cc" green="cc" red="cc" type="rgb"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Mudar Status de Entrega"/>
       </Properties>
