--- a/src/main/java/view/DlgRelatorioEntregas.form
+++ b/src/main/java/view/DlgRelatorioEntregas.form
@@ -98,6 +98,9 @@
   <SubComponents>
     <Component class="javax.swing.JLabel" name="txtEntregador">
       <Properties>
+        <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="cc" green="cc" red="cc" type="rgb"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="Selecione o Entregador:"/>
       </Properties>
     </Component>
